# pfr

./: Cargo.toml
src/: bcd.rs  config.rs  intro.rs  main.rs  sound.rs  table.rs  view.rs
src/assets/: intro.rs  mz.rs  table.rs
src/sound/: player.rs
