[package]
name = "pfr"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
clap = { version = "4.3.19", features = ["derive"] }
cpal = "0.15"
enum-map = { version = "2.6.1", features = ["serde"] }
game-loop = { version = "0.10.2", features = ["winit"] }
kvm-bindings = "0.6.0"
kvm-ioctls = "0.15.0"
libc = "0.2.147"
ndarray = "0.15.6"
pixels = "0.13.0"
png = "0.17.9"
serde = { version = "1.0.183", features = ["derive"] }
winit = "0.28.6"
